Icon added, background corrected

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/element.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="images/icon.png">
     <script defer src="JS/script.js"></script>
 </head>
 
