--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="images/icon.png">
-    <script defer src="JS/script.js"></script>
+    <script defer src="js/script.js"></script>
 </head>
 
 <body class="body">
