style.css flexbox addes, element.css deleted, index updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="body">
-    <div class="element">
+    <div>
         <form class="form js-formElement">
             <fieldset class="form__fieldset">
                 <legend class="legendText">Kalkulator walut</legend>
