cursor pointer addes, index, html and images updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator walut</title>
-    <meta property="og:image" content="images/currencyconverter.png">
+    <meta property="og:image" content="images/currency-converter.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
         integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,7 +23,7 @@
     <div>
         <form class="form js-formElement">
             <fieldset class="form__fieldset">
-                <legend class="legendText">Kalkulator walut</legend>
+                <legend class="form__legendText">Kalkulator walut</legend>
                 <p>
                     <label for="currencyElement">
                         <span class="form__field"> Wybierz walutę: </span>
